# tno-solar-nomad-plugin-base

./: .cruft.json  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/tno_solar_nomad_plugin_base/batch/: __init__.py  batch_parser.py  batch_schema.py
src/tno_solar_nomad_plugin_base/jv/: __init__.py  jv_parser.py  jv_schema.py
src/tno_solar_nomad_plugin_base/normalizers/: __init__.py  normalizer.py
src/tno_solar_nomad_plugin_base/parsers/: __init__.py  parser.py
src/tno_solar_nomad_plugin_base/schema_packages/: __init__.py  schema_package.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
tutorial/: tutorial.html
